--- a/config.ini
+++ b/config.ini
@@ -7,4 +7,4 @@ LOCAL_EPOCHS = 5
 [DISTRIBUTION]
 PYAMQP_IP = 10.10.100.1
 AGGREGATOR_IP = 10.10.100.13
-TRAINER_IP = ['10.10.100.14','10.10.100.15']
+TRAINER_IP = ['10.10.100.14']
