--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [TRAINING]
-NUM_COMMUNICATION_ROUNDS = 1
-NUM_SAMPLES = 10
-LOCAL_BATCH_SIZE = 32
+NUM_COMMUNICATION_ROUNDS = 50
+NUM_SAMPLES = 100
+LOCAL_BATCH_SIZE = 8
 LOCAL_EPOCHS = 1
 
 [DISTRIBUTION]
-PYAMQP_IP = 10.10.100.1
+PYAMQP_IP = 0.0.0.0
 AGGREGATOR_IP = 0.0.0.0
-TRAINER_IP = ['0.0.0.0']
+TRAINER_IP = ['0.0.0.0','0.0.0.0']
