--- a/config.ini
+++ b/config.ini
@@ -2,9 +2,8 @@
 NUM_COMMUNICATION_ROUNDS = 50
 NUM_SAMPLES = 100
 LOCAL_BATCH_SIZE = 8
-LOCAL_EPOCHS = 1
+LOCAL_EPOCHS = 5
 
 [DISTRIBUTION]
 PYAMQP_IP = 0.0.0.0
-AGGREGATOR_IP = 0.0.0.0
-TRAINER_IP = ['0.0.0.0','0.0.0.0']
+NUM_TRAINERS = 2
