--- a/src/config.ini
+++ b/src/config.ini
@@ -5,5 +5,10 @@ LOCAL_BATCH_SIZE = 32
 LOCAL_EPOCHS = 5
 
 [DISTRIBUTION]
-PYAMQP_IP = 10.10.100.1
-NUM_TRAINERS = 9
+PYAMQP_IP = aggrabbit
+NUM_TRAINERS = 1
+
+[CREDENTIALS]
+USERID=***
+PASSWD=***
+VHOST=***
